# ai-agent

./: .example.env  .gitignore  Makefile  PRD.md  README.md  pyproject.toml  requirements.txt
app/: api.py  llm_models.py  main.py  models.py  tools.py  worker.py
app/api/: endpoints.py
app/core/: config.py  database.py  settings.py
app/db/: models.py
app/modules/visualization/: __init__.py  router.py  schema.py  tasks.py
app/services/: agent_service.py  tools.py
example/: employee_performance.csv  population_by_country.csv  product_category_share.csv  sales_monthly.csv  temperature_trend.csv
